--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "aws-image-filter"]
 	path = aws-image-filter
 	url = git@github.com:Drew-Kimberly/aws-image-filter.git
+[submodule "aws-udagram-frontend"]
+	path = aws-udagram-frontend
+	url = git@github.com:Drew-Kimberly/aws-udagram-frontend.git
